Tweak git ignore to preserve data folder structure but ignore data files, rerun all notebooks

--- a/response/notebooks/unpack_data.ipynb
+++ b/response/notebooks/unpack_data.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "cee2fd88-2031-4c4c-8359-9e658941ed1b",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "981880f7-acf0-43fe-84f3-ace81953e932",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "6fcacd5b-c665-4ab1-9e76-7381423778d3",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
        "'186e48fa1aafbaf63c1c295e560c2a5e0bf241e9cae0a59038e27aa8225d8c63'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "8bace609-f3e9-4072-9e99-3cfce02acc95",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "abd50807-4caf-429b-a89a-cfe9101d188c",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "9482e2a8-1d68-4e3f-8b30-df18641fdac9",
    "metadata": {},
    "outputs": [
@@ -182,15 +182,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 0\n",
-      "drwxr-xr-x  5 muwang  staff  160 10 Jun 19:03 \u001b[1m\u001b[36mcompressed\u001b[m\u001b[m\n",
-      "drwxr-xr-x  3 muwang  staff   96 10 Jun 19:02 \u001b[1m\u001b[36mprocessed\u001b[m\u001b[m\n",
-      "drwxr-xr-x  5 muwang  staff  160 10 Jun 19:03 \u001b[1m\u001b[36mraw\u001b[m\u001b[m\n"
+      "total 95016\n",
+      "-rw-r--r--  1 muwang  staff  43008508 17 Aug  2020 data.json\n",
+      "-rw-r--r--  1 muwang  staff   5636096 14 May  2018 test_data.db\n"
      ]
     }
    ],
    "source": [
-    "!ls -l ../data"
+    "!ls -l ../data/raw"
    ]
   },
   {
