Add clarification on the outcome of this step

--- a/response/notebooks/stage3_build_labelling.ipynb
+++ b/response/notebooks/stage3_build_labelling.ipynb
@@ -12,7 +12,9 @@
     "\n",
     "Snorkel will then try _\"observing when and where these different labeling functions agree or disagree with one another, you can automatically learn—in unsupervised ways—when, where, and how much to trust each of them. You can thus learn their areas of expertise, and the overall level of expertise, so that when you combine their votes you end up with the highest quality label possible for each data point.\"_\n",
     "\n",
-    "This should work better than any opinionated analysis or heuristics that I can come up in short time. "
+    "This should work better than the opinionated analysis or heuristics that I can come up in short time. \n",
+    "\n",
+    "__The \"Labelling Model\" this produces at the end is a generalisation and statistical combination of my crude intuitions to the entire data set. It doesn't use all features (only the ones I wrote into the Labelling Functions) and it wouldn't generalise well into unseen data. Hence we still need another ML classification model to be trained on top of these labels.__"
    ]
   },
   {
