Switch to Majority Vote labelling model

--- a/response/notebooks/stage3_build_labelling.ipynb
+++ b/response/notebooks/stage3_build_labelling.ipynb
@@ -4639,14 +4639,12 @@
    "metadata": {},
    "source": [
     "# Save labels and final thoughts\n",
-    "When the two models disagree, I found it hard to tell which model is better. There are some examples seemed very interesting. If this is a real project with more time, it's worth looking into further. For now I'll naively trust the probabilistic model. \n",
-    "\n",
-    "Normally the labelling models should be tested against a hold out ground truth set. But in this special scenario, there's no ground truth at all. Any label I came up will not be much different from the LFs I wrote, biased in my personal way. So I'll skip ahead an save these labels for the next step. "
+    "When the two models disagree, I actually like the Majority voting model better, despite its simplicity. This exposes potential issue in the way that I wrote the LFs or my personal bias. I could further tweak the LFs or try validating against a ground truth test set. But I will leave it here because I don't want to spend too much time. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "id": "f5685c9d-149a-4771-9d20-4e2909b52e5a",
    "metadata": {},
    "outputs": [
@@ -4697,7 +4695,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>UNKNOWN</td>\n",
+       "      <td>FEMALE</td>\n",
        "      <td>64f7d7dd7a59bba7168cc9c960a5c60e</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -4745,7 +4743,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>UNKNOWN</td>\n",
+       "      <td>FEMALE</td>\n",
        "      <td>18923c9361f27583d2320951435e4888</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
@@ -4769,7 +4767,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>MALE</td>\n",
+       "      <td>FEMALE</td>\n",
        "      <td>aa21f31def4edbdcead818afcdfc4d32</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
@@ -4841,7 +4839,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>46274</th>\n",
-       "      <td>UNKNOWN</td>\n",
+       "      <td>FEMALE</td>\n",
        "      <td>5b34391ec6fbc0f189cb8d3d88806199</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -4865,7 +4863,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>46275</th>\n",
-       "      <td>UNKNOWN</td>\n",
+       "      <td>FEMALE</td>\n",
        "      <td>198fd2f143f70b149344bcaf7eddee12</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
@@ -4937,7 +4935,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>46278</th>\n",
-       "      <td>UNKNOWN</td>\n",
+       "      <td>FEMALE</td>\n",
        "      <td>0826f335ec6ed4e8867e41f89878d554</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
@@ -4965,18 +4963,18 @@
        "</div>"
       ],
       "text/plain": [
-       "        gender                       customer_id  is_newsletter_subscriber  \\\n",
-       "0      UNKNOWN  64f7d7dd7a59bba7168cc9c960a5c60e                       0.0   \n",
-       "1       FEMALE  fa7c64efd5c037ff2abcce571f9c1712                       1.0   \n",
-       "2      UNKNOWN  18923c9361f27583d2320951435e4888                       1.0   \n",
-       "3         MALE  aa21f31def4edbdcead818afcdfc4d32                       1.0   \n",
-       "4       FEMALE  668c6aac52ff54d4828ad379cdb38e7d                       1.0   \n",
-       "...        ...                               ...                       ...   \n",
-       "46274  UNKNOWN  5b34391ec6fbc0f189cb8d3d88806199                       0.0   \n",
-       "46275  UNKNOWN  198fd2f143f70b149344bcaf7eddee12                       1.0   \n",
-       "46276   FEMALE  338b5c8ade4af1a562d55d4036710630                       0.0   \n",
-       "46277   FEMALE  2115c065bfc1f3b39e4c87c202e80fa5                       1.0   \n",
-       "46278  UNKNOWN  0826f335ec6ed4e8867e41f89878d554                       1.0   \n",
+       "       gender                       customer_id  is_newsletter_subscriber  \\\n",
+       "0      FEMALE  64f7d7dd7a59bba7168cc9c960a5c60e                       0.0   \n",
+       "1      FEMALE  fa7c64efd5c037ff2abcce571f9c1712                       1.0   \n",
+       "2      FEMALE  18923c9361f27583d2320951435e4888                       1.0   \n",
+       "3      FEMALE  aa21f31def4edbdcead818afcdfc4d32                       1.0   \n",
+       "4      FEMALE  668c6aac52ff54d4828ad379cdb38e7d                       1.0   \n",
+       "...       ...                               ...                       ...   \n",
+       "46274  FEMALE  5b34391ec6fbc0f189cb8d3d88806199                       0.0   \n",
+       "46275  FEMALE  198fd2f143f70b149344bcaf7eddee12                       1.0   \n",
+       "46276  FEMALE  338b5c8ade4af1a562d55d4036710630                       0.0   \n",
+       "46277  FEMALE  2115c065bfc1f3b39e4c87c202e80fa5                       1.0   \n",
+       "46278  FEMALE  0826f335ec6ed4e8867e41f89878d554                       1.0   \n",
        "\n",
        "       cc_payments  paypal_payments  afterpay_payments  apple_payments  \\\n",
        "0              1.0              0.0                0.0             0.0   \n",
@@ -5046,14 +5044,14 @@
        "[46279 rows x 45 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "training_set = pd.concat([\n",
-    "            pd.Series(adv_preds).rename('gender').replace(label_dict),\n",
+    "            pd.Series(preds).rename('gender').replace(label_dict).replace('ABSTAIN', 'UNKNOWN'),\n",
     "            features\n",
     "        ], axis=1)\n",
     "\n",
@@ -5062,7 +5060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "id": "08e2bc76-bc53-421b-aff0-fdf84f229ad8",
    "metadata": {},
    "outputs": [],
